[package]
name = "section2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
thiserror = "1.0.40"
serde = { version = "1.0.158", features = ["derive"] }
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", branch="main" }
env_logger = "0.10.0"
